@@ -1,4 +1,4 @@
-This package contains the Linux PCI Utilities, version 1.0.
+This package contains the Linux PCI Utilities, version 1.01.
 
 Copyright (c) 1998 Martin Mares <mj@atrey.karlin.mff.cuni.cz>
 
