@@ -1,4 +1,4 @@
-.TH lspci 8 "7 February 98" "pciutils-0.92" "Linux PCI Utilities"
+.TH lspci 8 "9 February 98" "pciutils-1.01" "Linux PCI Utilities"
 .IX lspci
 .SH NAME
 lspci \- list all PCI devices
