@@ -1,7 +1,7 @@
 Begin3
 Title:          Linux PCI Utilities
-Version:        1.0
-Entered-date:   980207
+Version:        1.01
+Entered-date:   980209
 Description:    This package contains various utilities for inspecting and
 		setting of devices connected to the PCI bus. Requires
 		kernel version 2.1.82 or newer (supporting the /proc/bus/pci
@@ -9,7 +9,7 @@ Description:    This package contains various utilities for inspecting and
 Keywords:       kernel, pci, proc, lspci
 Author:         mj@atrey.karlin.mff.cuni.cz (Martin Mares)
 Maintained-by:  mj@atrey.karlin.mff.cuni.cz (Martin Mares)
-Primary-site:   atrey.karlin.mff.cuni.cz pub/local/mj/linux/pciutils-1.0.tar.gz
-Alternate-site: sunsite.unc.edu pub/Linux/system/hardware
+Primary-site:   atrey.karlin.mff.cuni.cz pub/local/mj/linux/pciutils-1.01.tar.gz
+Alternate-site: sunsite.unc.edu pub/Linux/system/hardware/pciutils-1.01.tar.gz
 Copying-policy: GPL
 End
